# Koine

./: .editorconfig  .gitignore  BRIEF.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Koine.slnx  LICENSE  NOTICE  README.md  SCRATCH_1530_REPRO.md  SECURITY.md  STUDIO-REVIEW-KANBAN.md  USER-STORIES.md  build.cmd  build.ps1  build.sh  install-mcp.cmd  install-mcp.ps1  install-mcp.sh  nuget-readme.md  package-lock.json  package.json  release-please-config.json  renovate.json
.claude/: settings.json
.claude/commands/: auto-dev-worker.md
.claude/skills/: repo-profile.md
.design-sync/: NOTES.md  config.json  conventions.md  gen-adapter-entry.mjs  patch-reference.mjs
.design-sync/previews/: DeckBar.tsx  DeckCard.tsx  ExportMenu.tsx  RightStrip.tsx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  koine-studio.yml  pr-title-lint.yml  release-please.yml  release.yml  studio-build.yml  wasm-aot-smoke.yml  website.yml
adr/: 0001-record-architecture-decisions.md  0002-conventional-commits-and-automated-semver.md  0003-concept-colors-single-palette-and-lsp-kind-modifiers.md  0003-npm-workspace-for-front-end-packages.md  0004-concept-colors-single-palette-and-lsp-kind-modifiers.md  0005-eslint-gate-for-frontend-safety-conventions.md  0006-transport-presentation-as-opt-in-csharp-layers.md  0007-kotlin-emitter-target.md  0008-release-assets-in-release-please-run.md  0009-active-context-scope-is-the-workbench-spine.md  0010-adopt-madr-4.0-for-architecture-decision-records.md  README.md  template.md
benchmarks/Koine.Compiler.Benchmarks/: CompilerBenchmarks.cs  Koine.Compiler.Benchmarks.csproj  Program.cs  README.md  ReadmeUpdater.cs
demo/: README.md  build-all.sh
demo/Pizzeria.Domain/: .gitignore  Consumers.cs  Pizzeria.Domain.csproj  Program.cs  Samples.cs
demo/Shop.Domain/: .gitignore  Consumers.cs  Program.cs  Samples.cs  Shop.Domain.csproj
demo/php/: .gitignore  README.md  composer.json  main.php  run.sh
demo/python/: .gitignore  README.md  main.py  run.sh
demo/reference/: README.md  koine-check.txt  pizzeria.glossary.md  shop.glossary.md
demo/rust/: .gitignore  Cargo.toml  README.md  run.sh
demo/rust/reference/: README.md  ordering.rs.txt
demo/rust/src/: main.rs
demo/typescript/: .gitignore  README.md  package.json  run.sh  tsconfig.build.json  tsconfig.json
design/: concept-colors.json
design/design_handoff_git_spotlight_logos/: README.md  (+5 more)
evals/: README.md  boundary-trigger-eval.json  create-issue-trigger-eval.json  get-repo-profile-trigger-eval.json  implement-issue-trigger-eval.json  merge-pr-trigger-eval.json  run_all.py  trigger_eval.py
examples/: README.md
scripts/: check-roadmap-sync.sh
src/: Koine.Emit.props
templates/: template.schema.json
tooling/: README.md
tooling/koine-studio/src-tauri/: Cargo.toml  tauri.conf.json
tooling/koine-studio/src-tauri/binaries/: .gitignore
tooling/koine-studio/src-tauri/capabilities/: default.json
tooling/koine-studio/src-tauri/src/: lib.rs  main.rs
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  vitest.config.ts
(+1992 files in other folders)
