[package]
name = "koine-studio"
version = "0.249.0" # x-release-please-version
description = "Koine Studio — the desktop IDE for the Koine domain-specific language for Domain-Driven Design."
authors = ["Philippe Matray <phmatray@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/Atypical-Consulting/Koine"
repository = "https://github.com/Atypical-Consulting/Koine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koine_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform pseudo-terminal (PTY) for the integrated terminal panel. The Rust
# sidecar opens a PTY pair, spawns the user's shell into it, and brokers raw bytes
# between the shell and the frontend over `pty://data` / `pty://exit` events (see the
# `pty_*` commands in lib.rs). `portable-pty` (from the WezTerm project) abstracts the
# Unix openpty + Windows ConPTY differences behind one API, so the broker stays
# platform-agnostic.
portable-pty = "0.9.0"

# macOS only: set the Dock icon at runtime (see `set_macos_dock_icon` in lib.rs).
# A bundled `.app` gets its Dock icon from Info.plist/icon.icns, but `tauri dev`
# runs the bare executable with no bundle, so the Dock would otherwise show a
# generic icon. These crates are already in the tree (pulled in transitively by
# Tauri), so naming them directly adds no extra compilation.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSImage"] }

# Unix only: recover the user's login shell from the password database when the GUI-stripped launch
# environment (Finder/Dock) leaves `$SHELL` unset — see `passwd_login_shell` in lib.rs. `nix` is
# already in the tree (pulled in by `portable-pty`, the PTY crate this file uses); we just opt into its
# `user` feature for `unistd::User::from_uid`, which wraps the reentrant `getpwuid_r` so the lookup is
# thread-safe and needs no `unsafe`.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }

